--- a/New folder/ctf.html
+++ b/New folder/ctf.html
@@ -156,13 +156,13 @@ The objective of the game is for players to venture into the opposing team's ter
 </div>
 <br/><br/>
 <div class="container" style="width:90%;margin:auto;">
-  <img src="gb.jpg" alt="Avatar" style="width:90px">
+  <img src="head.jpg" alt="Avatar" style="width:90px">
   <p><span>Chris Fox.</span> CEO at Mighty Schools.</p>
   <p>John Doe saved us from a web disaster.</p>
 </div>
 <br/>
 <div class="container" style="width:90%;margin:auto;">
-  <img src="gb.jpg" alt="Avatar" style="width:90px">
+  <img src="head.jpg" alt="Avatar" style="width:90px">
   <p><span>Rebecca Flex.</span> CEO at Company.</p>
   <p>No one is better than John Doe.</p>
 </div>
