--- a/New folder/ctf.html
+++ b/New folder/ctf.html
@@ -154,7 +154,8 @@ input[type=submit]:hover {
 The objective of the game is for players to venture into the opposing team's territory, grab the flag and return with it to their territory without being tagged. The flag is defended mainly by tagging opposing players who attempt to take it. Within their territory players are "safe", meaning that they cannot be tagged by opposing players. Once they cross into the opposing team's territory they are vulnerable.<hr/>
 
 </div>
-<br/><br/><h1 style="text-align:center;">Last Winners<\h1>
+<br/><br/>
+<h1 style="text-align:center;">Last Winners</h1>
 <div class="container" style="width:90%;margin:auto;">
   <img src="head.jpg" alt="Avatar" style="width:90px">
   <p><span>Chris Fox.</span> CEO at Mighty Schools.</p>
